# rabid-prometheus

./: .gitignore  README.md
body/: bot.js  package-lock.json  package.json
head/: CMakeLists.txt
head/scripts/: capture_view.py  screenshot.py
head/src/: main.cpp
head/src/arbiter/: arbiter.cpp  arbiter.h
head/src/circadian/: circadian.cpp  circadian.h
head/src/ipc/: body_link.cpp  body_link.h
head/src/lizard/: lizard.cpp  lizard.h
head/src/memory/: memory.cpp  memory.h
head/src/soul/: soul.cpp  soul.h
head/src/teacher/: teacher.cpp  teacher.h
server/: server.properties  spigot.yml  start.sh
server/plugins/Skript/scripts/: toddler_protection.sk
server/plugins/bStats/: config.yml
